atributo estado añadido en JefeEstablecimiento en el Frontend